# vision_pilot

./: .cspell.json  .gitignore  README.md  run_perf_bench.bat  run_perf_bench.ps1
Calibration/: README.md
Simulation/CARLA/ROS2/src/carla_msgs/: CMakeLists.txt  package.xml
Simulation/CARLA/ROS2/src/carla_msgs/msg/: CarlaEgoVehicleControl.msg
Simulation/CARLA/ROS2/src/visionpilot_carla_bridge/: README.md  package.xml  setup.cfg  setup.py
Simulation/CARLA/ROS2/src/visionpilot_carla_bridge/launch/: carla_bridge.launch.py
Simulation/CARLA/ROS2/src/visionpilot_carla_bridge/test/: test_control_mapping.py
Simulation/CARLA/ROS2/src/visionpilot_carla_bridge/visionpilot_carla_bridge/: carla_control_relay.py  control_mapping.py  ego_telemetry.py
VisionPilot/: .dockerignore  CMakeLists.txt  package.xml
VisionPilot/app/: CMakeLists.txt  vision_pilot.cpp
VisionPilot/benchmarks/: CMakeLists.txt  vp_perf_bench.cpp
VisionPilot/config/: vision_pilot.conf  vision_pilot_ros2.conf  vision_pilot_test.conf
VisionPilot/development_releases/1.0/: CMakeLists.txt  README.md  package.xml
VisionPilot/development_releases/1.0/app/: CMakeLists.txt  vision_pilot.cpp  vision_pilot_config.hpp
VisionPilot/development_releases/1.0/modules/config/include/config/: vision_pilot_config.hpp
VisionPilot/development_releases/1.0/modules/config/src/: vision_pilot_config.cpp
VisionPilot/development_releases/1.0/modules/control/src/: lateral_control.cpp  longitudinal_control.cpp
VisionPilot/development_releases/1.0/modules/engine/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/engine/include/engine/: onnx_engine.hpp
VisionPilot/development_releases/1.0/modules/engine/src/: onnx_engine.cpp
VisionPilot/development_releases/1.0/modules/logging/include/logging/: logger.hpp
VisionPilot/development_releases/1.0/modules/logging/src/: logger.cpp
VisionPilot/development_releases/1.0/modules/middleware_interfaces/ros2_interface/camera_subscriber/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/models/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/models/src/: auto_drive.cpp  auto_speed.cpp  auto_steer.cpp  trt_engine.cpp
VisionPilot/development_releases/1.0/modules/sensing/camera_interface/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/sensing/v4l2_interface/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/visualization/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/visualization/src/: visualization.cpp  visualization_to_webrtc.cpp
VisionPilot/development_releases/1.0/scripts/: find_homography_C_matrix.py
VisionPilot/development_releases/1.0/tests/: CMakeLists.txt
VisionPilot/development_releases/1.0/tests/sensing/image_preprocessing/: CMakeLists.txt  test_image_preprocessor.cpp
VisionPilot/development_releases/auxiliaries/: CMakeLists.txt
VisionPilot/docker/: Dockerfile  Dockerfile.cpu  build.sh  run.sh
VisionPilot/middleware_recipes/Standalone/AutoSpeed/: README.md
VisionPilot/modules/common/: CMakeLists.txt
VisionPilot/modules/common/include/common/: utils.hpp
VisionPilot/modules/common/src/: utils.cpp
VisionPilot/modules/config/: CMakeLists.txt
VisionPilot/modules/config/include/config/: vision_pilot_config.hpp
VisionPilot/modules/config/src/: vision_pilot_config.cpp
VisionPilot/modules/dsp_simd/: CMakeLists.txt
VisionPilot/modules/dsp_simd/include/dsp_simd/: aligned_buffer.hpp  chw_convert.hpp  dsp_arch.hpp
VisionPilot/modules/dsp_simd/src/: c66x_port_stub.c  chw_convert.cpp
VisionPilot/modules/engine/include/engine/: onnx_engine.hpp
VisionPilot/modules/engine/src/: onnx_engine.cpp
VisionPilot/modules/middleware_interfaces/ros2_interface/camera_ros2_interface/: CMakeLists.txt  README.md
VisionPilot/modules/middleware_interfaces/ros2_interface/camera_ros2_interface/src/: camera_ros2_interface.cpp
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_ros2_interface/src/: vehicle_ros2_interface.cpp
VisionPilot/modules/models/: CMakeLists.txt
VisionPilot/modules/models/include/models/: inference.hpp
VisionPilot/modules/models/src/: inference.cpp
VisionPilot/modules/safety_guardian/fusion/include/fusion/: lateral_fusion.hpp  longitudinal_fusion.hpp
VisionPilot/modules/safety_guardian/fusion/src/: lateral_fusion.cpp  longitudinal_fusion.cpp
VisionPilot/modules/safety_guardian/planning/: CMakeLists.txt
VisionPilot/modules/safety_guardian/planning/include/planning/: planning.hpp
VisionPilot/modules/safety_guardian/planning/src/: planning.cpp
VisionPilot/modules/sensing/camera_interface/: CMakeLists.txt
VisionPilot/modules/sensing/camera_interface/include/camera_interface/: camera_interface.hpp  file_interface.hpp
VisionPilot/modules/sensing/camera_interface/src/: file_interface.cpp  frame_source.cpp
VisionPilot/modules/sensing/image_preprocessing/: CMakeLists.txt
VisionPilot/modules/sensing/image_preprocessing/include/image_preprocessing/: image_preprocessor.hpp
VisionPilot/modules/sensing/image_preprocessing/src/: image_preprocessor.cpp
VisionPilot/modules/sensing/vehicle_interface/: CMakeLists.txt
VisionPilot/modules/sensing/vehicle_interface/include/vehicle_interface/: file_interface.hpp
VisionPilot/modules/sensing/vehicle_interface/src/: file_interface.cpp
VisionPilot/modules/visualization/: CMakeLists.txt
VisionPilot/modules/visualization/include/visualization/: local_display.hpp  visual_interface.hpp  visualization.hpp  webrtc_stream.hpp
VisionPilot/modules/visualization/src/: local_display.cpp  visualization.cpp  webrtc_stream.cpp
VisionPilot/scripts/: find_homography_C_matrix.py
VisionPilot/software_defined_vehicle/OpenADKit/AutoSpeed/: README.md  launch_autospeed.sh
VisionPilot/software_defined_vehicle/OpenADKit/Docker/: Dockerfile  entrypoint.sh
VisionPilot/software_defined_vehicle/OpenADKit/EgoLanes/: README.md  launch-egolanes.sh
VisionPilot/tests/app/: CMakeLists.txt  test_vision_pilot.cpp
docs/: BENCHMARK_CHIPSET_COMPARISON.md  (+2 more)
(+47 files in other folders)
