cmake_minimum_required(VERSION 3.22.1)

project(VisionPilot VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Put all executables in build/
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# Testing (default OFF; users can override with -DBUILD_TESTING=ON)
set(BUILD_TESTING OFF CACHE BOOL "Build the testing tree")

# GPU support
option(GPU "Enable GPU support" ON)

# ROS2 packages
option(ENABLE_ROS2_INTERFACE "Enable ROS2 support" OFF)

set(Python3_EXECUTABLE /usr/bin/python3 CACHE FILEPATH "" FORCE)
find_package(Python3 REQUIRED)

add_custom_target(generate_config ALL
        COMMAND Python3::Interpreter
        ${CMAKE_SOURCE_DIR}/scripts/find_homography_C_matrix.py
        --output ${CMAKE_BINARY_DIR}/config/homography_C_matrix.yaml
)

# Modules
add_subdirectory(modules/logging)

add_subdirectory(modules/config)

add_subdirectory(modules/common)

add_subdirectory(modules/sensing/image_preprocessing)

if(ENABLE_ROS2_INTERFACE)
    add_subdirectory(modules/middleware_interfaces/ros2_interface/camera_ros2_interface)
    add_subdirectory(modules/middleware_interfaces/ros2_interface/vehicle_ros2_interface)
endif()

add_subdirectory(modules/engine)
add_subdirectory(modules/models)

add_subdirectory(modules/safety_guardian/fusion)   # tracking is embedded inside fusion
add_subdirectory(modules/safety_guardian/planning)

add_subdirectory(modules/sensing/vehicle_interface)
add_subdirectory(modules/sensing/camera_interface)

add_subdirectory(modules/visualization)

add_subdirectory(modules/debug)

# Tests
add_subdirectory(tests)

# config
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# App
add_subdirectory(app)

set(CPACK_PACKAGE_VENDOR       "Autoware Foundation")
set(CPACK_PACKAGE_CONTACT      "zain.khawaja@autoware.org, atanasko.mitrev@autoware.org, pranav.doma@autoware.org, tran.huy@autoware.org")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_CONTACT}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "VisionPilot 1.0")

set(CPACK_DEBIAN_PACKAGE_DEPENDS
        "libgstreamer1.0-dev,
        libgstreamer-plugins-base1.0-dev,
        libgstreamer-plugins-bad1.0-dev,
        libsoup2.4-dev,
        libjson-glib-dev,
        libopencv-dev"
)

if(GPU)
    set(CPACK_DEBIAN_PACKAGE_DEPENDS
        "cuda-toolkit-13-3,
         libcudnn9-cuda-13,
         libcublas-13-3,
         cuda-cudart-13-3,
         libnvinfer10,
         libnvinfer-plugin10,
         libnvonnxparsers10,
         nvidia-open"
    )
endif()

# Architecture
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    set(ARCH_NAME "x86_64")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    set(ARCH_NAME "arm64")
else()
    set(ARCH_NAME "${CMAKE_SYSTEM_PROCESSOR}")
endif()

# GPU/CPU support
if(GPU)
    set(PKG_SUFFIX "_gpu")
else()
    set(PKG_SUFFIX "_cpu")
endif()

set(CPACK_PACKAGE_NAME "VisionPilot")
set(CPACK_SYSTEM_NAME "${ARCH_NAME}${PKG_SUFFIX}")
set(CPACK_GENERATOR   "DEB")

include(CPack)
